feat: Implement ticket archiving and user roles
Introduce user roles (Admin, Agent, User) and ticket archiving functionality. Admins and Agents can now toggle the display of archived tickets, and users can archive/unarchive tickets. This enhances ticket management and organization within the IT support system.

--- a/locales/en.json
+++ b/locales/en.json
@@ -5,6 +5,9 @@
   },
   "ticketList": {
     "title": "All Tickets",
+    "archivedTitle": "Archived Tickets",
+    "showArchived": "Show Archived",
+    "showUnassigned": "Show Unassigned Only",
     "noTickets": "No tickets found."
   },
   "ticketDetails": {
@@ -16,7 +19,12 @@
     "priority": "Priority",
     "lastUpdated": "Last Updated",
     "description": "Description",
-    "conversation": "Conversation"
+    "conversation": "Conversation",
+    "noComments": "No comments yet.",
+    "addCommentPlaceholder": "Add a comment..."
+  },
+  "ticket": {
+    "archived": "Archived"
   },
   "newTicketModal": {
     "title": "New Support Ticket",
@@ -40,7 +48,12 @@
   },
   "buttons": {
     "cancel": "Cancel",
-    "createTicket": "Create Ticket"
+    "createTicket": "Create Ticket",
+    "saveChanges": "Save Changes",
+    "addComment": "Add Comment",
+    "archive": "Archive",
+    "unarchive": "Unarchive",
+    "edit": "Edit"
   },
   "statuses": {
     "Open": "Open",
